# Gmail-Inbox-app

./: .env.example.example  .gitignore  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirement.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 466dd911737c_baseline_tables.py
app/: main.py
app/db/: base.py
app/routes/: reports.py
tests/: conftests.py  test_app_factory.py  test_health_endpoints.py  test_migrations.py  test_module_imports.py  test_settings_and_startup.py
